# x-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  EXAMPLE.md  LICENSE  README.md  SUPERSET.md
.github/workflows/: ci.yml
crates/x-cli/: Cargo.toml
crates/x-cli-core/: Cargo.toml
crates/x-cli-core/src/: error.rs  ir.rs  lib.rs  openapi.rs  protocol.rs  workflow.rs
crates/x-cli-core/tests/: parse.rs  superset.rs  workflow.rs
crates/x-cli-emitter-md/: Cargo.toml
crates/x-cli-emitter-md/src/: lib.rs
crates/x-cli-emitter-md/tests/: emit.rs
crates/x-cli-emitter-md/tests/fixtures/: petstore.yaml
crates/x-cli-runtime/: Cargo.toml
crates/x-cli-runtime/src/: auth.rs  http.rs  lib.rs  transport.rs  workflow_executor.rs
crates/x-cli-runtime/tests/: auth.rs  transport.rs  workflow_executor.rs
crates/x-cli/src/: main.rs
examples/: httpbin-workflow.yaml  httpbin.yaml  petstore-dag-workflow.yaml  petstore-workflow.yaml  petstore.yaml  tree.yaml
